# v2.0  31 Jul 2009
* Removed references for full 4.x compatability
* Changed from xajax to ezjscore + yui3 for ajax calls
* Merged rating code from ezcore / ezyui
* Code cleanup (cs & phpdoc and code name conventions)
* Load css with YUI.Loader


#v1.1  29 Jan 2008
+ added ability to have different keys per domain
+ added ability to set permissions to bypass captcha

# v1.0  4 Jan 2008
Initial version